welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: value || is not a member of Int
if (((temp1 || temp2) <0) || ((temp1 || temp2) >100)) return true
            ^